vlib/v/checker/tests/orm_no_default_value.out
vlib/v/checker/tests/orm_no_default_value.vv:11:4: error: expression requires a non empty `or {}` block
    9 |     _ := sql db {
   10 |         select from Person
   11 |     } or {
      |       ~~~~
   12 |     }
   13 | }
